added alysson to keynotes

--- a/_data/keynotes.yml
+++ b/_data/keynotes.yml
@@ -1,3 +1,6 @@
+alysson:
+  name: 'Alysson Bessani, Associate Professor at University of Lisbon, Portugal'
+  abstract: 'TBA'
 dahlia:
   name: 'Dahlia Malkhi, Research Lead at Calibra.'
   title: 'The Journey to Libra Blockchain Core and Beyond'
