--- a/_data/keynotes.yml
+++ b/_data/keynotes.yml
@@ -1,5 +1,6 @@
 alysson:
   name: 'Alysson Bessani, Associate Professor at University of Lisbon, Portugal'
+  title: 'TBA'
   abstract: 'TBA'
 dahlia:
   name: 'Dahlia Malkhi, Research Lead at Calibra.'
